--- a/_data/blog.yml
+++ b/_data/blog.yml
@@ -1,25 +1,25 @@
 # blog page sections
-- name: Blog
+- name: Opinions
   href: /blog/
 
 # edit following lines to custom your blog page, make sure name is the same as href but capitalized first letter(except HTML)
-- name: Python
-  href: /python/
+# - name: Python
+#   href: /python/
 
-- name: Linux
-  href: /linux/
+# - name: Linux
+#   href: /linux/
 
-- name: HTML
-  href: /html/
+# - name: HTML
+#   href: /html/
 
-- name: Database
-  href: /database/
+# - name: Database
+#   href: /database/
 
-- name: Mac
-  href: /mac/
+# - name: Mac
+#   href: /mac/
 
-- name: Life
-  href: /life/
+# - name: Opinions
+#   href: /life/
 
 # Don't display donation page: change donation to off at file '_config.yml'
 - name: Donate
