--- a/_data/index/banners.yml
+++ b/_data/index/banners.yml
@@ -3,7 +3,7 @@
 #
 # Images are expected to be located in `static/assets/img/`.
 - src: landing/header_one.jpg
-  title: first banner image
+  title: music <3
 
 - src: landing/header_two.jpg
-  title: second banner image
+  title: work <3
