--- a/_data/index/careers.yml
+++ b/_data/index/careers.yml
@@ -1,30 +1,44 @@
 # careers section data
 # if you don't have language feature(language.yml is empty), ignore "i18n" items
 - name:
-    detail: Company A
+    detail: Tata Consultancy Services Ltd
     i18n: company_a
   desc:
-    detail: I worked at Company A ...
+    detail: After graduating in 2019, I started working as a full stack developer as part of a Java Digital Commercial portfolio at Tata Consultancy Services Ltd. Mentored other junior devs & provided KT on existing SQL databases to other teams within the company.
     i18n: company_a_desc
   date:
-    detail: Apr. 2016
+    detail: Jul. 2019
     i18n: company_a_date
   job:
-    detail: CTO
+    detail: Full Stack Developer
     i18n: company_a_job
   icon: fa-plus-square
   present: true
 
 - name:
-    detail: Company B
+    detail: WBSEDCL & WBSETCL (Vidyut Bhavan)
     i18n: company_b
   desc:
-    detail: I worked at Company B ...
+    detail: As an intern I used MQTT & WebSocket to extract readings from electrical devices and store them in a MySQL Database. 
     i18n: company_b_desc
   date:
-    detail: Jun. 2015
+    detail: Jan. 2018
     i18n: company_b_date
   job:
-    detail: Full Stack Developer
+    detail: Intern
+    i18n: company_b_job
+  icon: fa-plus-square
+
+- name:
+    detail: East Regional Testing Laboratory - CETE
+    i18n: company_b
+  desc:
+    detail: As an intern I created a small working sample of a Programmable Logic Controller - used in industrial automation. 
+    i18n: company_b_desc
+  date:
+    detail: Sep. 2017
+    i18n: company_b_date
+  job:
+    detail: Intern
     i18n: company_b_job
   icon: fa-plus-square
