--- a/_data/index/links.yml
+++ b/_data/index/links.yml
@@ -1,18 +1,18 @@
 # links section data
-- last_name: Name 1
-  first_name:
-  desc: CEO
-  website: https://www.google.com
-  email: ceo@google.com
+- last_name: Hypnocrypt
+  first_name: Kolkata
+  desc: My metal band
+  website: https://www.facebook.com/HypnoCrypt/
+  email: hypnocrypt.official@gmail.com
 
-- last_name: Donate
-  first_name: Jalpc
-  desc: Support Jalpc
-  website: http://www.jarrekk.com/donate/
-  email: me@jarrekk.com
+- last_name: Panacea Society
+  first_name: Kolkata
+  desc: My non-profit org, we promote education and aid the underpriviledged
+  website: http://ngopanacea.org/
+  email: panaceasociety11615@gmail.com
 
-- last_name: LN
-  first_name: FN
-  desc: COO
-  website: https://github.com
-  email: coo@google.com
+# - last_name: 
+#   first_name: Images
+#   desc: Stock image credits
+#   website: https://unsplash.com/
+#   # email: coo@google.com
