--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "dev": "node build/dev-server.js",
     "start": "(jekyll build) & jekyll serve"
   },
+  "engines": {
+    "node": "=10.20.1",
+    "npm": "=6.14.4"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jarrekk/Jalpc.git"
